фикс кэш сервис